<resources>
    <string name="app_name">Constructor Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_settings">Settings</string>
    <string name="title_shapes">Choose the shape!</string>
    <string name="title_Calculator">Calculator</string>

    //shapes
    <string name="angle">angle</string>
    <string name="beam">beam</string>
    <string name="channel">channel</string>
    <string name="flat_bar">flat_bar</string>
    <string name="hexagonal_bar">hexagonal_bar</string>
    <string name="hexagonal_hex">hexagonal_hex</string>
    <string name="hexagonal_tube">hexagonal_tube</string>
    <string name="pipe">pipe</string>
    <string name="roundBar">roundBar</string>
    <string name="square_bar">square_bar</string>
    <string name="square_tubing">square_tubing</string>
    <string name="t_bar">t_bar</string>

    //materials
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="platinum">Platinum</string>
    <string name="copper">Copper</string>
    <string name="tin">Tin</string>
    <string name="cast_iron">Cast-iron</string>
    <string name="bronze">Bronze</string>
    <string name="aluminium">Aluminium</string>
    <string name="brass">Brass</string>
    <string name="chrome">Chrome</string>

    <string name="density">density</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="thickness">Thickness</string>
    <string name="side">Side</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="price">Price</string>

    <string name="clear">clear</string>
    <string name="calculate">Calculate</string>
    <string name="inputError">Must be completed!</string>
    <string name="chooseTheShape">choose the shape!</string>
    <string name="byLength">by Length</string>
    <string name="byWeight">by Weight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->


    ---------------------------------------------------------------------
    <string name="getStarted">Get started</string>
    <string name="conDescHomeImage">Constructing</string>

    --Currencies
    <string name="USD">United States dollar</string>
    <string name="EUR">Eurozone currency</string>
    <string name="GBP">Pound sterling</string>
    <string name="CNY">Chinese yuan</string>
    <string name="RUB">Russian ruble</string>
    <string name="AMD">Armenian dram</string>
    <string name="AED">United Arab Emirates dirham</string>
    <string name="ARS">Argentine peso</string>
    <string name="AUD">Australian dollar</string>
    <string name="BOB">Boliviano</string>
    <string name="BRL">Brazilian real</string>
    <string name="BYN">Belarusian ruble</string>
    <string name="CAD">Canadian dollar</string>
    <string name="CHF">Swiss franc</string>
    <string name="CUC">Cuban convertible peso</string>
    <string name="DKK">Danish krone</string>
    --new
    <string name="EGP">Egyptian pound</string>
    <string name="GEL">Georgian lari</string>
    <string name="HKD">Hong Kong dollar</string>
    --new
    <string name="IDR">Indonesian rupiah</string>
    --new
    <string name="ILS">Israeli new shekel</string>
    <string name="INR">Indian rupee</string>
    <string name="IQD">Iraqi dinar</string>
    <string name="IRR">Iranian rial</string>
    <string name="JPY">Japanese yen</string>
    <string name="KPW">North Korean won	</string>
    --new
    <string name="KRW">South Korean won</string>
    <string name="KWD">Kuwaiti dinar</string>
    <string name="KZT">Kazakhstani tenge</string>
    --new
    <string name="LBP">Lebanese pound</string>
    <string name="MAD">Moroccan dirham</string>
    <string name="MXN">Mexican peso</string>
    <string name="MYR">Malaysian ringgit</string>
    --new
    <string name="NGN">Nigerian naira</string>
    --new
    <string name="NOK">Norwegian krone</string>
    --new
    <string name="NZD">New Zealand dollar</string>
    <string name="OMR">Omani rial</string>
    --new
    <string name="PEN">Peruvian sol</string>
    <string name="PHP">Philippine peso</string>
    --new
    <string name="PYG">Paraguayan guaraní</string>
    --new
    <string name="QAR">Qatari riyal</string>
    <string name="RSD">Serbian dinar</string>
    --new
    <string name="SAR">Saudi riyal</string>
    <string name="SEK">Swedish krona/kronor</string>
    <string name="SGD">Singapore dollar</string>
    <string name="SYP">Syrian pound</string>
    <string name="THB">Thai baht</string>
    <string name="TMT">Turkmenistan manat</string>
    --new
    <string name="TND">Tunisian dinar</string>
    <string name="TRY">Turkish lira</string>
    <string name="UAH">Ukrainian hryvnia</string>
    <string name="UYU">Uruguayan peso</string>
    <string name="UZS">Uzbekistan som</string>
    --new
    <string name="VES">Venezuelan bolívar soberano</string>
    --new
    <string name="VND">Vietnamese đồng</string>
    <string name="ZAR">South African rand</string>

    //units
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    //result
    <string name="result">Result</string>
    <string name="initial_data">Initial data</string>
    <string name="count">Count</string>
    <string name="error_text">Field must be filled out!</string>
    <string name="material">Material</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <string name="shape">Shape</string>

    <string name="home_intro_text">Start constructing with the\nhelp of our formulas and cost\npredictions.</string>
    <string name="titleSend">new models to share</string>
    <string name="result_sub_title">Get calculated model.</string>
    <string name="computing">Computing</string>
    <string name="alert_dialog_remove_message">Are you going to delete selected models?</string>
    <string name="alert_dialog_remove_title">Removing</string>
    <string name="alert_dialog_remove_Yes">Yes</string>
    <string name="alert_dialog_remove_Cancel">Cancel</string>
    <string name="model_removed_ok">Model has been removed successfully!</string>
    <string name="models_removes_ok">Models have been removed successfully!</string>
    <string name="failed_removing">Removing failed!</string>
    <string name="no_model_found">No Model Found</string>
    <string name="saving_guide">-Select shape\n-Fill out parameters\n-Calculate\n-Save model</string>
    <string name="add_model">Add New Model</string>


</resources>
