<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.calcprojects.constructorbuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_calculateActivity"
            app:destination="@id/calculateActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.calcprojects.constructorbuddy.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.calcprojects.constructorbuddy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/shapesFragment"
        android:name="com.calcprojects.constructorbuddy.ui.shapes.ShapesFragment"
        android:label="fragment_shapes"
        tools:layout="@layout/fragment_shapes" />
    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.calcprojects.constructorbuddy.ui.calculator.CalculatorFragment"
        android:label="fragment_calculator"
        tools:layout="@layout/fragment_calculator" />
    <activity
        android:id="@+id/calculateActivity"
        android:name="com.calcprojects.constructorbuddy.ui.CalculateActivity"
        android:label="activity_calculate"
        tools:layout="@layout/activity_calculate" />
</navigation>
