<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.calculator.CalculatorFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/app_bar_menu"
            app:title="@string/calculate" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_recycler_top"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_shapes_marked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:dotColor="@android:color/black"
                    app:dotCount="4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_shapes_marked"
                    app:selectedDotColor="@android:color/black"
                    app:selectedDotRadius="6dp" />

                <Button
                    android:id="@+id/btn_byLength"
                    style="@style/button_big"
                    android:background="@drawable/background_btn_stay_pressed"
                    android:text="@string/byLength"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_shapes_marked"
                    app:layout_constraintLeft_toLeftOf="@id/recycler_shapes_marked"
                    app:layout_constraintTop_toBottomOf="@id/recycler_shapes_marked" />

                <Button
                    android:id="@+id/btn_byWeight"
                    style="@style/button_big"
                    android:background="@drawable/background_btn"
                    android:text="@string/byWeight"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_shapes_marked"
                    app:layout_constraintRight_toRightOf="@id/recycler_shapes_marked"
                    app:layout_constraintTop_toBottomOf="@id/recycler_shapes_marked" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@id/indicator" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/layout_buttons"
                app:layout_constraintTop_toBottomOf="@id/layout_images">

                <LinearLayout
                    android:id="@+id/layout_fields_input"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:hint="Length (L)"
                        app:boxBackgroundColor="@android:color/holo_green_dark"
                        app:boxStrokeWidth="4dp"
                        app:endIconDrawable="@android:drawable/ic_delete"
                        app:endIconMode="clear_text"
                        app:endIconTint="@android:color/holo_red_dark"
                        app:errorIconTintMode="screen"
                        app:errorTextColor="@android:color/holo_red_dark"
                        app:helperText="input your first and last names"
                        app:helperTextTextColor="@android:color/holo_orange_dark"
                        app:hintTextColor="@android:color/holo_blue_bright"
                        app:startIconDrawable="@drawable/ic_settings"
                        app:startIconTint="@android:color/holo_blue_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </ScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/btn_clear"
                    style="@style/button_big"
                    android:background="@drawable/background_btn"
                    android:text="@string/clear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btn_calculate"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_calculate"
                    style="@style/button_big"
                    android:background="@drawable/background_btn"
                    android:text="@string/calculate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/btn_clear"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>