<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:statusBarBackground="@color/colorSecondarySP"
    android:fitsSystemWindows="true"
    tools:context=".ui.result.ResultFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_res_fragment"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/colorSecondarySP"
            app:menu="@menu/app_bar_menu_result"
            app:subtitle="@string/result_sub_title"
            app:subtitleTextColor="@color/colorSecondaryLight"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_image_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="36dp"
            android:background="@mipmap/city"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/cardCut">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lay_in_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/tv_res_length_weight"
                    style="@style/textView_result"
                    android:layout_marginTop="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_res_total_volume"
                    style="@style/textView_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_res_length_weight" />

                <TextView
                    android:id="@+id/tv_res_price"
                    style="@style/textView_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_res_total_volume" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_init_data"
            android:layout_width="match_parent"
            android:background="@drawable/background_calculator_gradient"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_result">


            <TextView
                android:id="@+id/tv_init_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orbitron_bold"
                android:padding="6dp"
                android:text="@string/initial_data"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scroll_view_init_data"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/iv_shape_res"
                app:layout_constraintTop_toBottomOf="@id/tv_init_data">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_init_mat"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_length_weight"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_Width"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_height"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_diameter"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_side"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_thickness"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_thickness2"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_mat_price"
                        style="@style/textView_initial_data" />

                    <TextView
                        android:id="@+id/tv_init_rate"
                        style="@style/textView_initial_data" />

                </LinearLayout>

            </ScrollView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_shape_res"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@mipmap/angle"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/scroll_view_init_data"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/orbitron_bold"
        android:text="@string/save"
        android:textSize="12sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_save"
        app:layout_anchor="@id/card_result"
        app:layout_anchorGravity="bottom|end" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/orbitron_bold"
        android:padding="6dp"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_anchor="@id/card_result"
        app:layout_anchorGravity="top|start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>